# PEEditGUI

./: CMakeLists.txt  Convert.hpp  DataDirectoryEditor.cpp  DataDirectoryEditor.hpp  DataDirectoryEditor.ui  IndexButton.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NTEditor.cpp  NTEditor.hpp  NTEditor.ui  PortableExecutableInfo.hpp  SectionEditor.cpp  SectionEditor.hpp  SectionEditor.ui  SectionTableEditor.cpp  SectionTableEditor.hpp  SectionTableEditor.ui  main.cpp  task2.2.txt
